--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,63 +1,76 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
+
     defaultConfig {
         applicationId "com.udacity.heather.timetobake"
         minSdkVersion 21
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+
+
+
+        }
+        buildTypes {
+            release {
+                minifyEnabled false
+                proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            }
+        }
+        dataBinding {
+            enabled = true
         }
     }
-    dataBinding {
-        enabled = true
+    allprojects {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
+        repositories {
+            jcenter()
+            google()
+        }
     }
-}
-allprojects {
-    tasks.withType(JavaCompile) {
-        options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+
+
+    dependencies {
+      //  implementation 'androidx.annotation:annotation:1.0.0'
+        implementation fileTree(dir: 'libs', include: ['*.jar'])
+        implementation 'com.android.support:appcompat-v7:28.0.0'
+        implementation 'com.android.support:support-v4:28.0.0'
+        implementation 'com.android.support:recyclerview-v7:28.0.0'
+        implementation 'com.android.support:design:28.0.0'
+
+        def lifecycle_version = "1.1.1"
+        implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+
+        implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+        implementation 'com.google.code.gson:gson:2.8.5'
+        implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+        implementation 'com.google.code.gson:gson:2.8.5'
+
+        implementation 'com.google.android.exoplayer:exoplayer:2.8.1'
+
+        implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+        implementation 'com.facebook.stetho:stetho:1.5.0'
+        implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+
+        implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+        androidTestImplementation 'com.android.support:support-annotations:28.0.0'
+        implementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
+       // implementation 'com.google.guava:guava:26.0-android'
+
+      //  testImplementation 'junit:junit:4.12'
+
+        androidTestImplementation 'androidx.test.ext:junit:1.0.0'
+
+        androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
+        androidTestImplementation 'androidx.test:runner:1.1.0'
+        androidTestImplementation 'androidx.test:rules:1.1.0'
+        androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+        androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
+
     }
-}
-
-
-dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:support-v4:27.1.1'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-
-    def lifecycle_version = "1.1.1"
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
-
-
-    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-    implementation 'com.google.code.gson:gson:2.8.5'
-
-    implementation 'com.google.android.exoplayer:exoplayer:2.8.1'
-
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation 'com.facebook.stetho:stetho:1.5.0'
-    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-
-
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-    androidTestImplementation 'com.android.support:support-annotations:27.1.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.2'
-    implementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.2'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
-
-}
