--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,7 @@ android {
 
 
     dependencies {
-      //  implementation 'androidx.annotation:annotation:1.0.0'
+       // implementation 'androidx.annotation:annotation:1.0.0'
         implementation fileTree(dir: 'libs', include: ['*.jar'])
         implementation 'com.android.support:appcompat-v7:28.0.0'
         implementation 'com.android.support:support-v4:28.0.0'
@@ -66,7 +66,7 @@ android {
       //  testImplementation 'junit:junit:4.12'
 
         androidTestImplementation 'androidx.test.ext:junit:1.0.0'
-
+        androidTestImplementation 'androidx.test:core:1.0.0'
         androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
         androidTestImplementation 'androidx.test:runner:1.1.0'
         androidTestImplementation 'androidx.test:rules:1.1.0'
