--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,9 +33,24 @@
         <activity android:name=".activities.RecipeDetailActivity"/>
         <!-- Media receiver for Exo Player -->
         <receiver android:name=".fragments.StepFragment$MediaReceiver">
+
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
         </receiver>
+        <receiver android:name=".widget.BakingAppWidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/baking_app_widget_info" />
+        </receiver>
+        <!-- Intent service to load data for the widget -->
+        <service android:name=".widget.BakingAppWidgetService" />
+        <!-- RemoteViewsService for list view -->
+        <service android:name=".widget.WidgetRemoteViewsFactoryService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"/>
     </application>
+
 </manifest>
