--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,11 @@ android {
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
+        compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+        }
+
 
 
 
@@ -36,41 +41,33 @@ android {
     }
 
 
-    dependencies {
-       // implementation 'androidx.annotation:annotation:1.0.0'
-        implementation fileTree(dir: 'libs', include: ['*.jar'])
-        implementation 'com.android.support:appcompat-v7:28.0.0'
-        implementation 'com.android.support:support-v4:28.0.0'
-        implementation 'com.android.support:recyclerview-v7:28.0.0'
-        implementation 'com.android.support:design:28.0.0'
+dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha01'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-alpha01'
+    implementation 'com.google.android.material:material:1.1.0-alpha01'
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.google.android.exoplayer:exoplayer:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.facebook.stetho:stetho:1.5.0'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-alpha2'
+    androidTestImplementation 'androidx.annotation:annotation:1.0.1'
+    implementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
 
-        def lifecycle_version = "1.1.1"
-        implementation "android.arch.lifecycle:extensions:$lifecycle_version"
-
-        implementation 'com.squareup.retrofit2:retrofit:2.4.0'
-        implementation 'com.google.code.gson:gson:2.8.5'
-        implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
-        implementation 'com.google.code.gson:gson:2.8.5'
-
-        implementation 'com.google.android.exoplayer:exoplayer:2.8.1'
-
-        implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-        implementation 'com.facebook.stetho:stetho:1.5.0'
-        implementation 'com.facebook.stetho:stetho-okhttp3:1.5.0'
-
-        implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-        androidTestImplementation 'com.android.support:support-annotations:28.0.0'
-        implementation 'androidx.test.espresso:espresso-idling-resource:3.1.0'
-       // implementation 'com.google.guava:guava:26.0-android'
-
-      //  testImplementation 'junit:junit:4.12'
-
-        androidTestImplementation 'androidx.test.ext:junit:1.0.0'
-        androidTestImplementation 'androidx.test:core:1.0.0'
-        androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
-        androidTestImplementation 'androidx.test:runner:1.1.0'
-        androidTestImplementation 'androidx.test:rules:1.1.0'
-        androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-        androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
-
-    }
+    // testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.0.0'
+    androidTestImplementation 'androidx.test:core:1.0.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.1.0'
+    androidTestImplementation 'androidx.test:runner:1.1.0'
+    androidTestImplementation 'androidx.test:rules:1.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.1.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+}
+    
