--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,18 +6,15 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-
-
     <application
-
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-
         <uses-library android:name="android.test.runner" />
+
         <activity
             android:name=".activities.RecipeListActivity"
             android:label="@string/main_activity_label">
@@ -27,30 +24,39 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.RecipeStepActivity">
-
-        </activity>
-        <activity android:name=".activities.RecipeDetailActivity"/>
+        <activity android:name=".activities.RecipeStepActivity" />
+        <activity android:name=".activities.RecipeDetailActivity" />
         <!-- Media receiver for Exo Player -->
         <receiver android:name=".fragments.StepFragment$MediaReceiver">
-
             <intent-filter>
                 <action android:name="android.intent.action.MEDIA_BUTTON" />
             </intent-filter>
         </receiver>
-        <receiver android:name=".widget.BakingAppWidgetProvider">
+        <receiver android:name=".widget.BakingAppWidget">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
+
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/baking_app_widget_info" />
         </receiver>
         <!-- Intent service to load data for the widget -->
-        <service android:name=".widget.BakingAppWidgetService" />
+        <service android:name=".widget.WidgetRecipeLoadService" />
         <!-- RemoteViewsService for list view -->
-        <service android:name=".widget.WidgetRemoteViewsFactoryService"
-            android:permission="android.permission.BIND_REMOTEVIEWS"/>
+        <service
+            android:name=".widget.WidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
+        <receiver android:name=".widget.BakingAppWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/baking_app_widget_info" />
+        </receiver>
     </application>
 
 </manifest>
